--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -2,6 +2,7 @@ set(KERNEL_SOURCES
 	init/main.cpp
 	init/console.cpp
 	init/boot.s
+	init/gdt.cpp
 )
 
 add_link_options(-T${PROJECT_SOURCE_DIR}/kernel/init/linker.ld)
@@ -9,6 +10,8 @@ add_link_options(-ffreestanding)
 add_link_options(-O2)
 add_link_options(-nostdlib)
 add_link_options(-lgcc)
+
+include_directories(include)
 
 add_executable(redplanet ${KERNEL_SOURCES})
 
